[gd_scene load_steps=32 format=3 uid="uid://dhyimehqwpyde"]

[ext_resource type="Script" path="res://scripts/plant_enemy.gd" id="1_nuyo5"]
[ext_resource type="Texture2D" uid="uid://dlnr3c0t5k5my" path="res://assets/plant pred idle full.png" id="1_ouixb"]
[ext_resource type="PackedScene" uid="uid://crb0t6ddugmi4" path="res://scenes/beehave/plant_bee_have.tscn" id="2_4ua8s"]
[ext_resource type="Texture2D" uid="uid://6pnktu1oe1eb" path="res://assets/plant pred idle empty.png" id="2_qpc53"]
[ext_resource type="Texture2D" uid="uid://c8238s47uputn" path="res://assets/plant pred SNAP.png" id="3_2c53m"]
[ext_resource type="PackedScene" uid="uid://cd2f64lsbekiy" path="res://components/recurring_damage_component.tscn" id="6_7cppa"]
[ext_resource type="PackedScene" uid="uid://bn8pcpyhd2vva" path="res://components/health_component.tscn" id="7_nq68a"]
[ext_resource type="PackedScene" uid="uid://bklcflirjbaca" path="res://components/energy_component.tscn" id="8_n5u8n"]
[ext_resource type="PackedScene" uid="uid://qw5uumds8tx" path="res://components/struggle_component.tscn" id="9_mvank"]
[ext_resource type="PackedScene" uid="uid://cbhsx1sm5e7as" path="res://components/brace_component.tscn" id="10_w7ocl"]

[sub_resource type="AtlasTexture" id="AtlasTexture_iawea"]
atlas = ExtResource("1_ouixb")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nry6r"]
atlas = ExtResource("1_ouixb")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_u2752"]
atlas = ExtResource("1_ouixb")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_yxntc"]
atlas = ExtResource("1_ouixb")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_2f3yc"]
atlas = ExtResource("1_ouixb")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_4cax3"]
atlas = ExtResource("1_ouixb")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3k6v"]
atlas = ExtResource("1_ouixb")
region = Rect2(192, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_frkrs"]
atlas = ExtResource("1_ouixb")
region = Rect2(224, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_n7g5i"]
atlas = ExtResource("2_qpc53")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_nc10p"]
atlas = ExtResource("2_qpc53")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_llbo3"]
atlas = ExtResource("2_qpc53")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3lrn8"]
atlas = ExtResource("2_qpc53")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_k213b"]
atlas = ExtResource("2_qpc53")
region = Rect2(128, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xmxx"]
atlas = ExtResource("2_qpc53")
region = Rect2(160, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_s1fwp"]
atlas = ExtResource("3_2c53m")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxi7t"]
atlas = ExtResource("3_2c53m")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_23i0h"]
atlas = ExtResource("3_2c53m")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_baams"]
atlas = ExtResource("3_2c53m")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mgsxr"]
atlas = ExtResource("3_2c53m")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_vllfb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_iawea")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nry6r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u2752")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yxntc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2f3yc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4cax3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3k6v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_frkrs")
}],
"loop": true,
"name": &"full",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_n7g5i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nc10p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llbo3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3lrn8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_k213b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xmxx")
}],
"loop": true,
"name": &"idle",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_s1fwp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxi7t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_23i0h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_baams")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mgsxr")
}],
"loop": false,
"name": &"snap",
"speed": 10.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_0wwrk"]

[node name="PlantEnemy" type="Node2D" node_paths=PackedStringArray("struggle", "health_component", "recurring_damage_component", "brace_component", "energy_component", "mouth", "sprite") groups=["enemies"]]
position = Vector2(0, -16)
script = ExtResource("1_nuyo5")
struggle = NodePath("StruggleComponent")
health_component = NodePath("HealthComponent")
recurring_damage_component = NodePath("RecurringDamageComponent")
brace_component = NodePath("BraceComponent")
energy_component = NodePath("EnergyComponent")
mouth = NodePath("MouthPosition")
sprite = NodePath("Animation")

[node name="PlayerReleaseTimer" type="Timer" parent="."]
wait_time = 5.0
one_shot = true

[node name="PlantBeeHave" parent="." node_paths=PackedStringArray("blackboard", "actor") instance=ExtResource("2_4ua8s")]
blackboard = NodePath("@Node@89369")
actor = NodePath("..")

[node name="Animation" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_vllfb")
animation = &"snap"

[node name="StepBox" type="StaticBody2D" parent="."]

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="StepBox"]
polygon = PackedVector2Array(-16, 16.2, 16, 16.2, 11, 12, -11, 12)

[node name="NomBox" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="NomBox"]
position = Vector2(0, 6)
shape = SubResource("CircleShape2D_0wwrk")

[node name="MouthPosition" type="Marker2D" parent="."]
position = Vector2(0, 9)

[node name="RecurringDamageComponent" parent="." instance=ExtResource("6_7cppa")]

[node name="HealthComponent" parent="." instance=ExtResource("7_nq68a")]
max_health = 10.0
health = 10.0

[node name="EnergyComponent" parent="." instance=ExtResource("8_n5u8n")]

[node name="StruggleComponent" parent="." node_paths=PackedStringArray("recurring_damage_component", "brace_component", "energy_component", "health_component") instance=ExtResource("9_mvank")]
recurring_damage_component = NodePath("../RecurringDamageComponent")
brace_component = NodePath("../BraceComponent")
energy_component = NodePath("../EnergyComponent")
health_component = NodePath("../HealthComponent")

[node name="BraceComponent" parent="." instance=ExtResource("10_w7ocl")]

[connection signal="body_entered" from="NomBox" to="." method="_on_nom_box_body_entered"]
[connection signal="body_exited" from="NomBox" to="." method="_on_nom_box_body_exited"]
